# Rubrics

./: .gitignore  LICENSE  README.md  docker-compose-dev.yaml  docker-compose-tests.yaml
.github/workflows/: ci.yml
backend/: .pre-commit-config.yaml  Dockerfile_backend  Dockerfile_backend_tests  alembic.ini  main.py  pyproject.toml  settings.py  worker.py
backend/api/: base_schemas.py
backend/api/actions/: rubrics.py
backend/api/rubrics/: handlers.py  schemas.py
backend/db/: dals.py
backend/db/elasticsearch/: migrations.py  session_es.py
backend/db/es/: indexes.py  migrations.py  session_es.py
backend/db/pg/: models.py  session_pg.py
backend/db/postgres/: dals.py  models.py  session_pg.py
backend/db/rabbitmq/: sender.py
backend/db/rubrics/: models.py
backend/migrations/: env.py
backend/migrations/versions/: 2023_12_27_1724-1991a777f029_alter_table_rubrics.py  2023_12_27_1726-ac4b03175a98_alter_table_rubrics.py  2023_12_27_1729-d0533712eb14_alter_table_rubrics.py  2023_12_28_2217-f1bf437e0b60_alter_table_rubrics.py  ed8593cc4325_alter_table_rubric.py
backend/tests/: conftest.py
backend/tests/test_api_rubrics/: test_create_rubric_handler.py  test_delete_rubric_handler.py  test_get_handler.py
