[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["LyaKakoy <LYAKAKOYXY@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.108.0"
elasticsearch = "^8.11.1"
envparse = "^0.2.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
uvicorn = {extras = ["standart"], version = "^0.25.0"}
aiohttp = "^3.9.1"
aio-pika = "^9.3.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
